[package]
name = "accept-language"
description = "Parse and compare Accept-Language header strings"
readme = "README.md"
repository = "https://github.com/mike-engel/accept-language-rs"
documentation = "https://docs.rs/accept-language"
license = "MIT"
keywords = ["accept-language", "i18n", "internationalization", "header", "parser"]
categories = ["parser-implementations"]
version = "2.0.0"
authors = ["Mike Engel <mike@mike-engel.com>", "Sean Stangl"]
edition = "2018"

[dependencies]
